cabal-version: 2.4

name:           refinements
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      ProofCombinators, 
      Light,
      Solved.Light,
      Deep, 
      Solved.Deep,
      Fibonacci, 
      Solved.Fibonacci   
  build-depends:
       liquidhaskell, 
       liquid-prelude,
       containers,
       base >= 4.7 && < 5                   
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell